--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ server:
 spring:
   datasource:
     password: admin
-    url: jdbc:postgresql://localhost:5432/registration
+    url: jdbc:postgresql://localhost:5432/frs
     username: postgres
   jpa:
     hibernate:
